# franka-scripted

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  requirements.txt
cfg/: T_camera_cb.tf  T_gripper_world.tf  T_realsense_world.tf  bottom_right.tf  environment.yml  fc_gqcnn_pj.yaml  pre_grasp.tf  realsense.intr  top_left.tf
cfg/Panda/: panda.urdf
cfg/tools/: camera_registration.yaml
tools/: camera_registration.py  franka_base_polymetis.py  gen_demos_grasp.py  gen_structured_grasp.py  gen_structured_stack.py  grasp_planner.py  utils.py  vis_traj.py
